10 July 2013: Matthijs
- Signer response to SOA queries from file, instead of memory. Makes
  response non-blocking [OPENDNSSEC-424].

5 July 2013: Matthijs
- Fix invalid free in case of adding a new zone with DNS outbound adapters
  and NotifyCommand (thanks Ville Mattila).

3 July 2013: Matthijs
- SUPPORT-66: Fix file descriptor leak in case of TCP write error
  [OPENDNSSEC-427].

28 June 2013: Matthijs
- Improved XFR checking

17 June 2013: Matthijs
- SUPPORT-60: Fix datecounter in case inbound serial is higher than outbound
  serial [OPENDNSSEC-420].

12 June 2013: Matthijs
- OPENDNSSEC-401: SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr>
  so that the user can specify the SOA serial to use in the signed zone.

10 June 2013: Matthijs
- Bugfix: Fix malform in Outbound IXFR/TCP subsequent packet (thanks Stuart
  Lau).

6 June 2013: Matthijs
- Bugfix: Remove wrongly placed reset of serial disk acquired (thanks 
  Stuart Lau).
- Bugfix: Don't crash if NSEC3 Hash Algo is bogus.

22 April 2013: Matthijs
- OPENDNSSEC-247: TTL NSEC3 was not updated on SOA Minimum change.

15 February 2013: Matthijs
- Coverity report

11 February 2013: Matthijs
- Improve error logging when xfr fails due to xfrd_parse_rrs().

5 February 2013: Matthijs
- Fix deadlock when in corner case denial node has no RRset.
- OPENDNSSEC-389 / SUPPORT-50 / SUPPORT-51

1 February 2013: Matthijs
- OPENDNSSEC-388: Internal serial should take into account inbound
  serial.

29 January 2013: Matthijs
- Fix build warning

23 January 2013: Matthijs
- Always check for max backoff before working sleep/setting task time.

16 January 2013: Matthijs
- Signer should not fail read task if there is no new xfr (thanks
  Ville Mattila)

10 January 2013: Matthijs
- OPENDNSSEC-350: Improve logging when there are problems with inbound xfr
- SUPPORT-44: bind() to sockets before privdrop

10 December 2012: Matthijs
- Better TSIG logging and documentation, return NOTAUTH on TSIG error.
