@@ -1,3 +1,6 @@
+23 July 2013: Matthijs
+- Set AA bit in SOA response (fix daily tests).
+
 10 July 2013: Matthijs
 - Signer response to SOA queries from file, instead of memory. Makes
   response non-blocking [OPENDNSSEC-424].
